Sun, Jan 25, 2008
---------------------------------------------------------------------
- Added task categories and due dates to system settings.
- Completed first implementation of Tasks index page.

Sat, Jan 24, 2008
---------------------------------------------------------------------
- Added named scopes for tasks model, created tasks fixtures.
- Two months anniversary ;-).

Fri, Jan 23, 2008
---------------------------------------------------------------------
- Moved permissions related code to [uses_user_permissions] Rails plugin.
- Refactored models to make use of [uses_user_permissions] plugin.
- Moved permission model to [uses_user_permissions] plugin.
- Updated [Task] model and database schema for [Tasks] table.

Thu, Jan 22, 2008
---------------------------------------------------------------------
- Implemented list delete for accounts, campaigns, leads, and opportunities.
- Generated Tasks scaffold.
- Added [Tasks] tab to default settings, renamed [Home] tab to [Dashboard].

Wed, Jan 21, 2008
---------------------------------------------------------------------
- Implemented list delete for contacts.

Tue, Jan 20, 2008
---------------------------------------------------------------------
- Refactored Setting.opportunity_stage to make sure the insertion order is preserved.
- Implemented opportunities filtering by stage.
- Welcome, Mr. President.

Mon, Jan 19, 2008
---------------------------------------------------------------------
- Improved login/logout flash messages.
- Refactored list templates to use collection partials.
- Added sidebar for Campaigns to filter them out by status.

Sun, Jan 18, 2008
---------------------------------------------------------------------
- More fine tuning of plugins and callback hooks.
- Sample plugin now implements view, controller, and controller filter hooks.

Sat, Jan 17, 2009
---------------------------------------------------------------------
- Implemented FatFreeCRM::Plugin and FatFreeCRM::Callback modules.