@@ -6,10 +6,13 @@ class TasksController < ApplicationController
   # GET /tasks.xml
   #----------------------------------------------------------------------------
   def index
+    @task = Task.new
     @tasks = {}
     Setting.task_due_date.each do |value, key|
       @tasks[key] = Task.send(key)
     end
+    @due_date = Setting.task_due_date[1..-1] << [ "On specific date...", :on_specific_date ]
+    @category = Setting.task_category.invert.sort
 
     respond_to do |format|
       format.html # index.html.erb
@@ -34,10 +37,12 @@ class TasksController < ApplicationController
   #----------------------------------------------------------------------------
   def new
     @task = Task.new
+    @users = User.all_except(@current_user) # to assign the task
 
     respond_to do |format|
       format.html # new.html.erb
       format.xml  { render :xml => @task }
+      format.js   # new.js.rjs
     end
   end
 
