@@ -1,3 +1,7 @@
+Mon, Jan 26, 2008
+---------------------------------------------------------------------
+- Added inline [Create New Task] form.
+
 Sun, Jan 25, 2008
 ---------------------------------------------------------------------
 - Added task categories and due dates to system settings.
